--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GamepadInterface</title>
 
-  <script type="text/javascript" src="../src/gamePadInterface.js"></script>
+  <script type="text/javascript" src="../src/gamepadInterface.js"></script>
 
   <link rel="stylesheet" type="text/css" href="styles/normalize.css" />
   <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
 <body>
-  <div class="container">
+  <div class="contents-container">
     <h1 class="gamepadHeadline">Xbox Gamepad Interface Prototype</h1>
-    
+
     <div class="btn btnCircle" id="a">A</div>
     <div class="btn btnCircle" id="b">B</div>
     <div class="btn btnCircle" id="x">X</div>
@@ -34,8 +34,19 @@
     <div class="btn arrow arrowLR" id="left">&lt;</div>
     <div class="btn arrow arrowLR" id="right">&gt;</div>
 
-    <div class="btn stick" id="l3">L3</div>    
-    <div class="btn stick" id="r3">R3</div>
+    <div class="btn stickBtn" id="l3">L3</div>    
+    <div class="btn stickBtn" id="r3">R3</div>
+
+    <div class="stickCirc" id="lCirc">
+      <div class="crosshairContainer">
+        <div class="crosshair" id="lStick">+</div>
+      </div>
+    </div>
+    <div class="stickCirc" id="rCirc">
+      <div class="crosshairContainer">
+        <div class="crosshair" id="rStick">+</div>
+      </div>
+    </div>
 
     <img class="gamepadImg" src="./img/xbox360gamepad.jpg" />
   </div>
