--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <div class="btn btnCenterSide" id="back">BK</div>
       <div class="btn btnCenterSide" id="start">ST</div>
 
-      <div class="btn arrow arrowUD" id="up">^</div>
-      <div class="btn arrow arrowUD" id="down">v</div>
-      <div class="btn arrow arrowLR" id="left">&lt;</div>
-      <div class="btn arrow arrowLR" id="right">&gt;</div>
+      <div class="btn arrow arrowUD" id="up">&uarr;</div>
+      <div class="btn arrow arrowUD" id="down">&darr;</div>
+      <div class="btn arrow arrowLR" id="left">&larr;</div>
+      <div class="btn arrow arrowLR" id="right">&rarr;</div>
 
       <div class="btn stickBtn" id="l3">L3</div>    
       <div class="btn stickBtn" id="r3">R3</div>
